# sqlite-amalgamation

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yaml
cmake/: SQLite3Config.cmake.in
docs/: Configuration-Options.md  README.md  Step-by-Step-Guide.md  User-Guide.md
source/: README.md
